Dodanie checkboxów związanych z wyborem typu pomiaru

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Auth</string>
+    <string name="measurement_title">Pomiar tetna i glukozy</string>
 </resources>
