--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Auth</string>
-    <string name="measurement_title">Pomiar tetna i glukozy</string>
+    <string name="measurement_title">Pomiary ręczne</string>
 </resources>
