--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Auth</string>
     <string name="measurement_title">Pomiary ręczne</string>
     <string name="pomiary_r_czne">Pomiary ręczne</string>
+	<string name="label_choose_session">Wybierz numer zapisanej sesji pomiarowej:</string>
 </resources>
